Fixed bug #34809 (FETCH_INTO in PDO crashes without a destination object).