ext/pdo/pdo_stmt.c
@@ -824,6 +824,12 @@ static int do_fetch(pdo_stmt_t *stmt, int do_bind, zval *return_value,
 				break;
 			
 			case PDO_FETCH_INTO:
+				if (!stmt->fetch.into) {
+					pdo_raise_impl_error(stmt->dbh, stmt, "HY000", "No fetch-into object specified." TSRMLS_CC);
+					return 0;
+					break;
+				}
+
 				Z_TYPE_P(return_value) = IS_OBJECT;
 				Z_OBJ_HANDLE_P(return_value) = Z_OBJ_HANDLE_P(stmt->fetch.into);
 				Z_OBJ_HT_P(return_value) = Z_OBJ_HT_P(stmt->fetch.into);
